add delivery date setter in action and use it in submit order form handler

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
+    <h1 style="text-align: center">صفحه پرداخت</h1>
     <div style="display: flex; width: 100%; justify-content: space-around">
       <button
         style="
